test/error/StForeachArrayStgTypeMismatch.ci
public static class Test
{
	public static bool Run()
	{
		int[3] a;
		foreach (string s in a) { //ERROR: Cannot coerce int to string
		}
		return true;
	}
}
